* important changes in version 1.36 16/9/2007:
-   Portability fixes for VMS, as offered by Craig Berry.

* important changes in version 1.34 15/8/2007:
-   Address #28687: Fwd: Unespected reaction of Archive::Tar
    A::T didn't always handle filenames that evaluated to false 
    (like '0') gracefully. This patch adds a few 'or defined' check 
    to the A::T codebase and a test to ensure filenames like '0' are 
    handeled correctly.
-   Apply #28407: Unicode and Archive::Tar - documentation patch as
	FAQ patch

* important changes in version 1.32 25/7/2007:
-   Apply #28407: Unicode and Archive::Tar - documentation patch as
    FAQ patch
-   Following a report from rgs that A::T 1.31 doesn't play nicely
    with -Dmksymlinks under perl core, rewrite the symlink logic in
    A::T::File->new to continue building an object when reading a 
    symlink fails, rather than refusing to read on a symlink (which 
    is obviously wrong)
-   Quell warnings when a gid is not resolvable to a group name

* important changes in version 1.31 18/5/2007:
-   No longer use the t/setup.t and t/cleanup.t files but just bundle 
    the binary files; this was done for core integration, but the new 
    uupacktool.pl script means we dont have to do this anymore
_   Apply core perl Change 30997 by rgs@stcosmo on 2007/04/20 15:03:57
-   Address: #27124: Unneeded warning sent when checking for file
    inclusion contains_file() will no longer warn to STDERR when a file 
    is not contained in an archive and $WARN is set to 'true'.
-   Address #26492: Dangling symlinks not preserved: Archive::Tar used 
    to complain about dangling symlinks, unlike standard gnu tar, which 
    would add them silently. This patch brings A::T's behaviour in line 
    with gnu tar
-   Minor pod fixes

* important changes in version 1.30 8/2/2006:
-   applied bleadperl patch: Subject: Change 27416: 
    Cleanup Archive-Tar temporary test files