@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Archive-Tar
-version:      1.36
+version:      1.37_01
 version_from: lib/Archive/Tar.pm
 installdirs:  site
 requires:
